adding all antes de empezar con la edicion de las creds de git

--- a/app_data/config/app_config.json
+++ b/app_data/config/app_config.json
@@ -14,7 +14,7 @@
     "admin_password_hash": ""
   },
   "github": {
-    "repo_url": "",
+    "repo_url": "https://github.com/mceballos65/integrated_app.git",
     "branch": "main-2",
     "repositoryUrl": "",
     "branchName": "",
