--- a/app_data/config/app_config.json
+++ b/app_data/config/app_config.json
@@ -19,7 +19,7 @@
     "repositoryUrl": "",
     "branchName": "",
     "localPath": "./app_data/config/",
-    "githubUsername": "",
+    "githubUsername": "mceballos65@hotmail.com",
     "token": ""
   },
   "edited_configs": {
