--- a/app_data/config/app_config.json
+++ b/app_data/config/app_config.json
@@ -15,8 +15,7 @@
   },
   "github": {
     "repositoryUrl": "https://github.com/mceballos65/integrated_app.git",
-    "branch": "main-2",
-    "branchName": "",
+    "branchName": "main-2",
     "localPath": "./app_data/config/",
     "githubUsername": "mceballos65@hotmail.com",
     "token": ""
