--- a/app_data/config/app_config.json
+++ b/app_data/config/app_config.json
@@ -17,7 +17,7 @@
     "repositoryUrl": "https://github.com/mceballos65/integrated_app.git",
     "branchName": "main-2",
     "localPath": "./app_data/config/",
-    "githubUsername": "mceballos65@hotmail.com",
+    "githubUsername": "mceballos65",
     "token": ""
   },
   "edited_configs": {
