--- a/app_data/config/app_config.json
+++ b/app_data/config/app_config.json
@@ -1,6 +1,6 @@
 {
   "app": {
-    "prediction_url": "http://localhost:8000",
+    "prediction_url": "/api",
     "account_code": "ACM"
   },
   "logging": {
